--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center d-block align-self-center">
                     <p class="lead bg-warning shadow">Especialización en Logística<br>Posgrados y Marina Mercante<br>Escuela Naval de Suboficiales ARC "Barranquilla”<br><br>Maikol Mell Ferrer Guzmán <br>Especialista en Logística <br>Magister en Logística <br>Correo mellferrer@gmail.com<br></p>
                     <img
-                        class="shadow" src="assets/img/logo.png" width="500"></div>
+                        class="img-fluid shadow" src="assets/img/logo.png" width="450" height="300"></div>
                 <div class="col-md-6 m-auto">
                     <p class="lead border rounded"><strong><em>La geografía del transporte</em></strong><em>&nbsp;es una subdisciplina de la geografía que se preocupa por la movilidad de las personas, el transporte de mercancías y la información y su organización espacial, considerando los atributos y limitaciones relacionados con el origen, el destino, la extensión, la naturaleza y el propósito de los movimientos.</em><br><br>El
                         propósito único del transporte es superar el espacio, que está determinado por una variedad de&nbsp;<strong>limitaciones</strong>&nbsp;humanas y físicas&nbsp;&nbsp;, como la distancia, el tiempo, las divisiones administrativas
@@ -48,15 +48,8 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            </ul>
-            <p class="copyright">Company Name © 2017</p>
+            <div class="social"><a class="text-primary" href="https://mail.google.com/mail/u/0/#inboxm" target="_blank"><i class="icon ion-ios-email"></i></a></div>
+            <p class="copyright"><strong>Maikol M Ferrer G © 2021</strong></p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
