--- a/unidad1.html
+++ b/unidad1.html
@@ -89,7 +89,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6"><iframe width="540" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/QdVoiP5AxIc"></iframe><img src="assets/img/comer2.png" width="540"></div>
+                <div class="col-md-6 d-block align-self-center"><iframe class="d-block" width="540" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/QdVoiP5AxIc"></iframe><img class="img-fluid d-block" src="assets/img/sparador.png" width="550" height="10"><img class="d-block"
+                        src="assets/img/comer2.png" width="540"></div>
             </div>
         </div>
     </div>
