--- a/unidad1.html
+++ b/unidad1.html
@@ -89,8 +89,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 d-block align-self-center"><iframe class="d-block" width="540" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/QdVoiP5AxIc"></iframe><img class="img-fluid d-block" src="assets/img/sparador.png" width="550" height="10"><img class="d-block"
-                        src="assets/img/comer2.png" width="540"></div>
+                <div class="col-md-6 text-center"><iframe width="500" height="315" allowfullscreen="" frameborder="0" src="https://www.youtube-nocookie.com/embed/QdVoiP5AxIc?controls=0&amp;showinfo=0&amp;rel=0"></iframe><img class="img-fluid" src="assets/img/sparador.png" width="500" height="10">
+                    <img
+                        class="img-fluid" src="assets/img/comer2.png" width="500" height="300"></div>
             </div>
         </div>
     </div>
