--- a/unidad1.html
+++ b/unidad1.html
@@ -47,9 +47,9 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab">
-                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="true" aria-controls="accordion-1 .item-2" href="div#accordion-1 .item-2">Globalización de Mercados y Producción</a></h5>
+                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="div#accordion-1 .item-2">Globalización de Mercados y Producción</a></h5>
                             </div>
-                            <div class="collapse show item-2" role="tabpanel" data-parent="#accordion-1">
+                            <div class="collapse item-2" role="tabpanel" data-parent="#accordion-1">
                                 <div class="card-body">
                                     <p class="card-text">Globalización&nbsp;<em>La&nbsp;globalización se</em>&nbsp;refiere&nbsp;a la&nbsp;<em>integración</em>&nbsp;de&nbsp;los mercados en la economía global, lo que conduce a una mayor&nbsp;<em>interconexión</em>&nbsp;de las&nbsp;economías
                                         nacionales.&nbsp;Los mercados donde la globalización es&nbsp;particularmente significativa incluyen&nbsp;<strong>los mercados financieros</strong>,&nbsp;como los mercados de capitales, los mercados de&nbsp;<strong>dinero</strong>&nbsp;y&nbsp;crédito
@@ -66,12 +66,13 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab">
-                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="div#accordion-1 .item-3">Teorías del Comercio Internacional</a></h5>
+                                <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="true" aria-controls="accordion-1 .item-3" href="div#accordion-1 .item-3">Teorías del Comercio Internacional</a></h5>
                             </div>
-                            <div class="collapse item-3" role="tabpanel" data-parent="#accordion-1">
+                            <div class="collapse show item-3" role="tabpanel" data-parent="#accordion-1">
                                 <div class="card-body">
-                                    <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                                </div>
+                                    <p class="card-text">Teoría del comercio internacional: La teoría del comercio internacional son simplemente las teorías que explican el comercio internacional.&nbsp;O bien, estas son las teorías que explican o justifican por qué un país
+                                        o una empresa hacen comercio internacional.&nbsp;O cómo una empresa o un país pueden llevar a cabo el comercio internacional de manera rentable.<br><br>Principalmente, hay dos tipos de teoría del comercio internacional:
+                                        las teorías clásicas basadas en el país y las teorías modernas basadas en las empresas.<br></p><button class="btn btn-primary" type="button">Leer más</button></div>
                             </div>
                         </div>
                     </div>
