--- a/unidad1.html
+++ b/unidad1.html
@@ -72,7 +72,7 @@
                                 <div class="card-body">
                                     <p class="card-text">Teoría del comercio internacional: La teoría del comercio internacional son simplemente las teorías que explican el comercio internacional.&nbsp;O bien, estas son las teorías que explican o justifican por qué un país
                                         o una empresa hacen comercio internacional.&nbsp;O cómo una empresa o un país pueden llevar a cabo el comercio internacional de manera rentable.<br><br>Principalmente, hay dos tipos de teoría del comercio internacional:
-                                        las teorías clásicas basadas en el país y las teorías modernas basadas en las empresas.<br></p><button class="btn btn-primary" type="button">Leer más</button></div>
+                                        las teorías clásicas basadas en el país y las teorías modernas basadas en las empresas.<br></p><a class="btn btn-primary" role="button" href="teoriasci.html">Leer más</a></div>
                             </div>
                         </div>
                     </div>
